# AIProgramming

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  makefile  sources.src
src/: CMakeLists.txt  main.cpp
src/entities/: BaseGameEntity.cpp  BaseGameEntity.hpp  Troll.cpp  Troll.hpp
src/entities/troll/: Troll.cpp  Troll.hpp
src/entity/: BaseGameEntity.cpp  BaseGameEntity.hpp  CMakeLists.txt  EntityNames.hpp
src/entity/constructionworker/: CMakeLists.txt  ConstructionWorker.cpp  ConstructionWorker.hpp
src/enum/: Locations.hpp
src/enums/: EntityNames.hpp  Locations.hpp  MessageTypes.hpp
src/messages/: MessageManager.hpp  Telegram.hpp
src/misc/: CMakeLists.txt  GenericUtils.hpp
src/state/: CMakeLists.txt  State.hpp
src/state/constructionworker/: CMakeLists.txt  ConstructionWorkerStates.cpp  ConstructionWorkerStates.hpp
src/states/: State.hpp  StateMachine.cpp  StateMachine.hpp  StateMachine.tpp
src/states/troll/: TrollState.cpp  TrollState.hpp
